# killer-trash

./: CMakeLists.txt  README.md
injector/: injector.py
src/: main.cpp
src/core/: bundle.cpp  bundle.h  target.cpp  target.h
src/utils/: crypto_crc32.cpp  crypto_crc32.h  process.cpp  process.h
